// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuizContainer should match the snapshot wtih all the data passed in 1`] = `
<div
  className="game-container"
>
  <Popup
    randomizeQuestions={[Function]}
  />
  <Player
    g={0}
    h={0}
    house="ravenclaw"
    r={0}
    s={0}
  />
</div>
`;

exports[`QuizContainer should match the snapshot wtih all the data passed in 2`] = `
<div
  className="game-container"
>
  <div
    className="game-board"
  >
    <Question />
    <Answer
      addOtherPoints={[Function]}
      addPoints={[Function]}
      incorrectAns={[Function]}
      nextQuestion={[Function]}
      saveWrongQs={[MockFunction]}
    />
  </div>
  <Player
    g={0}
    h={0}
    house="ravenclaw"
    r={0}
    s={0}
  />
</div>
`;
